[package]
name = "money_map"
version = "0.0.1"
authors = ["Brandon Powers <bpowers1215@gmail.com>"]

[dependencies]
nickel = "0.8.1"
mongodb = "*"
bson = "*"
rustc-serialize = "*"
jwt = "*"
hyper = "=0.8.1"
rust-crypto = "*"
chrono = "0.2"
log = "0.3"
log4rs = "0.3.3"
toml = "*"
sodiumoxide = "0.0.12"
regex = "*"
