[package]
name = "money_map"
version = "0.0.1"
authors = ["Brandon Powers <bpowers1215@gmail.com>"]

[dependencies]
nickel = "0.10.0"
mongodb = "=0.3.10"
bson = "0.12.2"
rustc-serialize = "0.3.22"
jwt = "0.4.0"
hyper = "=0.10.12"
rust-crypto = "0.2.36"
chrono = "0.4.0"
log = "0.3.8"
log4rs = "0.3.3"
toml = "0.2.0"
sodiumoxide = "0.0.12"
regex = "0.1.80"
